# ai-code-refactor

./: CMakeLists.txt  LICENSE
examples/: sample.cpp  sample.cpp.bak
include/ai/: AiEngine.hpp
include/analyzers/: Analyzer.hpp  Issue.hpp
include/refactor/: RefactorEngine.hpp
src/: main.cpp
src/ai/: AiEngine.cpp  OnnxAiEngine.cpp
src/analyzers/: CppAnalyzer.cpp
src/refactor/: RefactorEngine.cpp
